05_multiple-resource/sg.tf
resource "aws_security_group" "tech-sg" {
  name        = "tech-vpc-sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.tech-vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [var.my_ip]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "tech-sg"
  }
}
